--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>[3.8.2,)</version>
+                  <version>[3.8.2,3.0.1)</version>
                 </requireMavenVersion>
               </rules>
             </configuration>
